# norma-opinf

./: README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
examples/cuboid/: cuboid_op_inf.yaml  make_op_inf.py  opinf_utils_anthony.py  opinf_utils_test.ipynb  run_workflow.sh
examples/example_opinf_drivers/: example_linear.py
examples/single/cuboid/: cuboid.g
norma-regression-tests/overlap/cuboid/: cuboid-2.g
normaopinf/: __init__.py  calculus.py  computing_environments.py  exodus_reader.py  norma_models.py  norma_parameter_spaces.py  parser.py  readers.py
normaopinf/neuralnets/: operators.py
normaopinf/opinf/: __init__.py  app.py  models.py  sym_opinf.py
normaopinf/opinf/nnopinf/: train.py
tests/: conftest.py  test_reader.py
tests/data/single/: cuboid-acce-0000.csv  cuboid-acce-0010.csv  cuboid-acce-0040.csv  cuboid-acce-0060.csv  cuboid-acce-0110.csv  cuboid-acce-0180.csv  cuboid-acce-0190.csv  cuboid-acce-0200.csv  cuboid-curr-0010.csv  cuboid-curr-0030.csv  cuboid-curr-0060.csv  cuboid-curr-0070.csv  cuboid-curr-0110.csv  cuboid-curr-0170.csv  cuboid-curr-0180.csv  cuboid-curr-0190.csv  cuboid-disp-0040.csv  cuboid-disp-0090.csv  cuboid-disp-0120.csv  cuboid-disp-0180.csv  cuboid-kinetic-0000.csv  cuboid-kinetic-0010.csv  cuboid-kinetic-0060.csv  cuboid-kinetic-0080.csv  cuboid-kinetic-0090.csv  cuboid-kinetic-0110.csv  cuboid-kinetic-0130.csv  cuboid-kinetic-0150.csv  cuboid-kinetic-0190.csv  cuboid-nsy--y-curr-0030.csv  cuboid-nsz+-z-curr-0010.csv  cuboid-nsz+-z-curr-0060.csv  (+35 more)
tests/opinf/: test_opinf.py  test_snapshots.py
(+587 files in other folders)
